--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <title>Noel is coming</title>
 </head>
 <body>
-
+    <main>
+        <h1>C'est quand Noël ?</h1>
+        <span id="noel"></span>
+    </main>
+    <footer>
+        Design by ALouKatraz
+    </footer>
     <script src="JS/script.js"></script>
 </body>
 </html>
