Ajout du style de cette page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <span id="noel"></span>
     </main>
     <footer>
-        Design by ALouKatraz
+        Create by <a href="https://github.com/ALouKatraz"> ALouKatraz</a>
     </footer>
     <script src="JS/script.js"></script>
 </body>
